WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307963
ASSERTION FAILED: !isSkippedContentRoot(*this) in WebCore::RenderBox::foregroundIsKnownToBeOpaqueInRect
https://bugs.webkit.org/show_bug.cgi?id=307963
Summary
ASSERTION FAILED: !isSkippedContentRoot(*this) in WebCore::RenderBox::foregro...
Fujii Hironori
Reported
2026-02-15 18:43:38 PST
1. ./Tools/Scripts/run-minibrowser --gtk --debug "
https://www.msn.com/ja-jp?bundles=staging
" 2. ASSERTION FAILED ASSERTION FAILED: !isSkippedContentRoot(*this) ../../../Source/WebCore/rendering/RenderBox.cpp(1916) : virtual bool WebCore::RenderBox::foregroundIsKnownToBeOpaqueInRect(const LayoutRect &, unsigned int) const 1 0x7fda5f27d926 WebCore::RenderBox::foregroundIsKnownToBeOpaqueInRect(WebCore::LayoutRect const&, unsigned int) const 2 0x7fda5f27dc06 WebCore::RenderBox::foregroundIsKnownToBeOpaqueInRect(WebCore::LayoutRect const&, unsigned int) const 3 0x7fda5f27e6c1 WebCore::RenderBox::computeBackgroundIsKnownToBeObscured(WebCore::LayoutPoint const&) 4 0x7fda5f0eed5b WebCore::RenderBox::backgroundIsKnownToBeObscured(WebCore::LayoutPoint const&)::{lambda()#1}::operator()() const 5 0x7fda5f0dff8e WebCore::RenderBox::backgroundIsKnownToBeObscured(WebCore::LayoutPoint const&) 6 0x7fda5f0dfb19 WebCore::BackgroundPainter::paintBackground(WebCore::LayoutRect const&, WebCore::BleedAvoidance) const 7 0x7fda5f27cf5f WebCore::RenderBox::paintBoxDecorations(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 8 0x7fda5f1e5e8d WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 9 0x7fda5f1e4aab WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 10 0x7fda5f1e5671 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 11 0x7fda5f20f845 WebCore::RenderBlockFlow::paintBlockLevelContentInInline(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 12 0x7fda5e061467 WebCore::LayoutIntegration::LineLayout::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::RenderInline const*) 13 0x7fda5f20f70d WebCore::RenderBlockFlow::paintInlineChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 14 0x7fda5f1e4f98 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 15 0x7fda5f1e676c WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 16 0x7fda5f1e4aab WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 17 0x7fda5f1e5671 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 18 0x7fda5f1e514c WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool) 19 0x7fda5f1e4ff3 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 20 0x7fda5f1e676c WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 21 0x7fda5f1e4aab WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 22 0x7fda5f1e5671 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 23 0x7fda5f20f845 WebCore::RenderBlockFlow::paintBlockLevelContentInInline(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 24 0x7fda5e061467 WebCore::LayoutIntegration::LineLayout::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::RenderInline const*) 25 0x7fda5f20f70d WebCore::RenderBlockFlow::paintInlineChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 26 0x7fda5f1e4f98 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 27 0x7fda5f1e676c WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 28 0x7fda5f1e4aab WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 29 0x7fda5f1e5671 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 30 0x7fda5f1e514c WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool) 31 0x7fda5f1e4ff3 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&)
Attachments
reduced content
(31.92 KB, text/html)
2026-02-15 18:43 PST
,
Fujii Hironori
no flags
Details
test case
(310 bytes, text/html)
2026-03-05 23:11 PST
,
Fujii Hironori
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-02-15 18:43:56 PST
Created
attachment 478366
[details]
reduced content
Radar WebKit Bug Importer
Comment 2
2026-02-22 18:44:10 PST
<
rdar://problem/170945759
>
Fujii Hironori
Comment 3
2026-03-05 23:11:21 PST
Created
attachment 478573
[details]
test case
Fujii Hironori
Comment 4
2026-03-05 23:58:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/60048
EWS
Comment 5
2026-03-08 19:47:25 PDT
Committed
308897@main
(ca3b56d49b32): <
https://commits.webkit.org/308897@main
> Reviewed commits have been landed. Closing PR #60048 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug