ASSERTION FAILED: !isSkippedContentRoot(*this) in WebCore::RenderBox::foregroundIsKnownToBeOpaqueInRect https://bugs.webkit.org/show_bug.cgi?id=307963

Reviewed by NOBODY (OOPS!).

RenderBox::foregroundIsKnownToBeOpaqueInRect asserted
!isSkippedContentRoot(*this), but it can be a skipped content root. Removed the
assertion.

Test: imported/w3c/web-platform-tests/css/css-contain/content-visibility/crashtests/div-in-hidden.html

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/content-visibility/crashtests/div-in-hidden.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::foregroundIsKnownToBeOpaqueInRect const):